# Hive

./: .dockerignore  .env.example  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXTENDING.md  README.md  RELEASE_NOTES.md  docker-compose.yml  index.html  llms.txt  mkdocs.yml  models.yaml  pyproject.toml  sitemap.xml
.context/: execution-plan.md  incomplete-areas-audit.md
.context/plans/: phase1-remaining.md  phase2-plan.md  plan-1-framework-completion.md  plan-2-killer-features-v2.md  plan-2-killer-features.md  plan-2-v3-final.md  plan-3-launch-and-growth.md  simulation-plan.md
.context/results/: batch-a-run-2.md  batch-a-run.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dev-release.yml  docs.yml  release.yml
agent-guide/: index.html
api/python-api/: index.html
api/sdk-reference/: index.html
changelog/: index.html
contributing/: index.html
demo/: record.sh
docs/: agent-guide.md  changelog.md  index.md  user-guide.md
docs/api/: python-api.md  sdk-reference.md
docs/examples/: index.md
docs/extending/: index.md
docs/getting-started/: cli-quickstart.md  installation.md  quickstart.md
docs/guide/: architecture.md  cli-reference.md  daemon-mode.md  deployment.md  developer-guide.md  evals.md  persona.md  rest-api.md  suffering.md  toolkits.md
examples/: 01_quickstart.py  02_tools.py  03_structured_output.py  04_multi_agent.py  05_mcp_tools.py  06_cli_agent.yaml  07_custom_toolkit.py  08_workflow_pipeline.py  09_error_handling.py  10_multi_provider.py  11_notepad_presets.py  12_web_research.py  13_instructions_deep_dive.py  14_memory_and_comms.py  15_zero_config.py  16_task_management.py  17_knowledge_base.py  18_alarms.py  19_lightweight_server.py  20_memory_backends.py  21_production_hardening.py  22_voice_agent.py  23_streaming_and_capabilities.py  README.md  index.html  test_voice_infra.py
experiments/: README.md
experiments/configs/: local-lives.yaml  model-compare.yaml
experiments/scripts/: analyze_local_lives.py  base.py  exp_economy_dynamics.py  exp_journal_quality.py  exp_local_lives.py  exp_model_compare.py  exp_personality_clash.py  exp_suffering_trajectories.py  exp_survival_marathon.py
extending/: index.html
getting-started/cli-quickstart/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/architecture/: index.html
guide/cli-reference/: index.html
guide/daemon-mode/: index.html
guide/deployment/: index.html
guide/developer-guide/: index.html
guide/evals/: index.html
guide/persona/: index.html
guide/rest-api/: index.html
guide/suffering/: index.html
guide/toolkits/: index.html
launch/: hackernews.md  linkedin-final.md  linkedin-poker.md  reddit-artificial-final.md  reddit-indianstartups-final.md  reddit-locallama-final.md  reddit-locallama-poker.md  reddit-locallama.md  reddit-machinelearning.md  reddit-ml-final.md  reddit-ml-poker.md
logs/runs/run-20260509-083237-e6f64e/: run.json
logs/runs/run-20260512-081452-4c4011/: run.json
logs/runs/run-20260514-043017-7e9141/: run.json
logs/runs/run-20260514-043510-bccb42/: run.json
logs/runs/run-20260514-043554-9f767f/: run.json
profiles/: coder.yaml  gambler.yaml  hustler.yaml  oracle.yaml  philosopher.yaml  researcher.yaml  reviewer.yaml  tester.yaml
scenarios/: runtime_test.py
scenarios/detective/: config.yaml  crime_scene.md  run.py
scenarios/detective/clues/: clue_01_body.md  clue_02_paper.md  clue_03_locked_room.md  clue_04_diana_alibi.md  clue_05_leo_alibi.md  (+3 more)
scripts/: start.sh  stop.sh
search/: search_index.json
skills/: context-engineering.md  incremental-implementation.md  security-hardening.md  tdd.md
src/hive/: __init__.py  api.py  checkpoint.py  config.py  context.py  errors.py  serve.py
tests/: conftest.py  test_a2a.py  test_api.py  test_auto_resume.py  test_benchmark.py  test_checkpoint.py  test_config.py  test_daemon_approval.py  test_daemon_caching.py  test_daemon_concurrency.py  test_daemon_integration.py  test_daemon_lifecycle.py  test_daemon_timeout.py  test_determinism.py  test_diagnostics.py  test_errors.py  test_event_engine.py  test_events.py  test_export.py  test_feedback_loops.py  test_goal_dependencies.py  test_goal_strategy.py  test_groq_provider.py  test_hooks.py  test_interactions.py  test_model_registry.py  test_narrative_in_prompt.py  test_pattern_registry.py  test_stressor_registry.py  test_suffering.py  test_suffering_behavior.py  test_world_registry.py  test_world_state.py
tests/agents/: test_existence.py  test_identity.py  test_mood.py
tests/cli/: test_cli.py
tests/evals/: test_evals.py
tests/integration/: test_agent_scenarios.py  test_lightweight_agent.py  test_mutter_toolkits.py
tests/logging/: test_trace.py  test_writer_reader.py
tests/mcp/: test_client.py  test_server.py
tests/memory/: test_backend.py  test_durability.py  test_store.py
tests/models/: test_capabilities.py  test_conversion.py  test_providers.py  test_retry.py  test_streaming.py  test_tool_use_recovery.py
tests/orchestrator/: test_manager.py  test_session.py  test_toolkit.py
tests/routing/: test_router.py
tests/runtime/: test_agent.py  test_approval.py  test_conversation_log.py  test_daemon_delegation.py  test_dev_tools.py  test_error_messages.py  test_guardrails.py  test_instructions.py  test_notepad.py  test_persona.py  test_plugin_loader.py  test_robustness.py  test_run_once.py  test_schedules.py  test_standalone_agent.py  test_structured.py  test_sub_agents.py  test_toolkit_binding.py  test_toolkits.py  test_tools.py  test_types.py  test_web_tools.py
tests/server/: test_hardening.py  test_rest_api.py  test_streaming.py
tests/stt/: test_recorder.py  test_stt.py
tests/tools/: test_alarm_checker.py  test_alarms.py  test_clipboard.py  test_clipboard_read.py  test_knowledge.py  test_links.py  test_named_links.py  test_standalone_init.py  test_tasks.py
tests/triggers/: test_triggers.py
user-guide/: index.html
(+210 files in other folders)
