[project]
name = "hive-agent"
version = "0.6.1"
description = "Local-first agent OS. Spawn persistent AI agents that collaborate, write code, and use tools autonomously."
authors = [{ name = "chiruu12" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai-agents", "multi-agent", "autonomous", "claude", "openai", "fireworks", "local-llm", "agent-os"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    # Upper bounds on fast-moving deps cap the next major so a breaking release
    # can't silently enter; minimums stay loose for downstream compatibility.
    # anthropic is still 0.x (breaking changes land in minor bumps), so its <1
    # cap mainly guards the eventual 1.0 -- revisit/loosen when 1.0 ships.
    "httpx>=0.27,<1",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "pydantic>=2.5,<3",
    "anthropic>=0.40,<1",
    "openai>=1.30,<3",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    "mcp>=1.27,<2",
    "beautifulsoup4>=4.14.3",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-python-dateutil>=2.8",
]
chromadb = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
audio = [
    "sounddevice>=0.5",
    "scipy>=1.12",
    "numpy>=1.24",
]
hotkeys = [
    "pynput>=1.7",
]
voice = [
    "hive-agent[audio,hotkeys]",
]
# REST API server (`hive serve`). Not in core: FastAPI/uvicorn are real extra deps
# (unlike the provider aliases below), so they carry version pins.
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sse-starlette>=2.1",
]
# Provider/CLI extras. These SDKs ship in core `dependencies` today (so existing
# installs are unchanged) -- the extras are unversioned aliases that name the
# grouping without duplicating (and risking drift from) the version pins in
# `dependencies`, which stays authoritative. They pave the way for a slimmer core
# later; a missing one raises a clear MissingDependencyError naming the extra.
anthropic = ["anthropic"]
openai = ["openai"]
mcp = ["mcp"]
cli = ["typer"]

[project.scripts]
hive = "hive.cli.main:app"
hive-mcp = "hive.mcp.server:main"

[project.urls]
Homepage = "https://github.com/chiruu12/Hive"
Repository = "https://github.com/chiruu12/Hive"
Issues = "https://github.com/chiruu12/Hive/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hive"]

[tool.hatch.build.targets.wheel.force-include]
"profiles" = "hive/profiles"
"skills" = "hive/skills"
"models.yaml" = "hive/models.yaml"
"src/hive/tools/notepad/presets.yaml" = "hive/tools/notepad/presets.yaml"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# ui.py embeds a static HTML/CSS/JS page as a string literal; line length doesn't
# apply to the markup.
"src/hive/server/ui.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = false

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "tqdm.*",
    "mlx_whisper.*",
    "faster_whisper.*",
    "sounddevice.*",
    "scipy.*",
    "pynput.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "twine>=6.0",
    "build>=1.0",
    "mkdocs-material>=9.7.6",
]
